Reverted all changes back to version ebb59dc47fa52ef817b71c48e74cb0dbb1c3eb47

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,11 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Path Aliases */
-    "baseUrl": "./src", // Changed baseUrl to src
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"] // Path now relative to baseUrl
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["src"], // 'src' still includes everything under it
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
