--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,10 @@
 {
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "skipLibCheck": true,
+    "tsBuildInfoFile": "./node_modules/.tsconfig.node.tsbuildinfo",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
     "types": ["node"]
   },
-  "include": ["vite.config.ts", "eslint.config.js"]
+  "include": ["vite.config.ts", "postcss.config.js", "tailwind.config.ts", "eslint.config.js"]
 }
